--- a/.github/workflows/user_project_ci.yml
+++ b/.github/workflows/user_project_ci.yml
@@ -61,11 +61,11 @@ jobs:
       - name: Export PDK ROOT
         run: echo "PDK_ROOT=/home/runner/work/pdk" >> $GITHUB_ENV
 
-      - name: Export PDK PATH
-        run: echo "PDKPATH=/home/runner/work/pdk/sky130A" >> $GITHUB_ENV
-
       - name: Export PDK
         run: echo "PDK=gf180mcuC" >> $GITHUB_ENV
+
+      - name: Export PDK PATH
+        run: echo "PDKPATH=$PDK_ROOT/$PDK" >> $GITHUB_ENV
 
       - name: Export OPENLANE ROOT
         run: echo "OPENLANE_ROOT=/home/runner/work/caravel_user_project/openlane" >> $GITHUB_ENV
@@ -91,7 +91,8 @@ jobs:
 
       - name: Harden using Openlane
         run: |
-          make spi_wrapper
+          make spi_register
+          make spi_device
           make user_project_wrapper
 
       - name: run precheck
