--- a/openlane/spi_device/config.json
+++ b/openlane/spi_device/config.json
@@ -1,23 +1,24 @@
 {
     "DESIGN_NAME": "spi_device",
-    "DESIGN_IS_CORE" : false,
+    "DESIGN_IS_CORE" : 0,
     "VERILOG_FILES": [
         "dir::../../verilog/rtl/defines.v",
         "dir::../../verilog/rtl/rtl_core/spi.v"
         ],
-    "CLOCK_PERIOD": 24,
+    "CLOCK_PERIOD": 50,
     "CLOCK_PORT": "spi_clk",
     "CLOCK_NET": "reg_clk",
     "FP_SIZING": "absolute",
-    "DIE_AREA": "0 0 90 90",
+    "DIE_AREA": "0 0 250 250",
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "PL_BASIC_PLACEMENT": 0,
-    "PL_TARGET_DENSITY": 0.55,
+    "PL_TARGET_DENSITY": 0.6,
+    "PL_TIME_DRIVEN":1,
     "DIODE_INSERTION_STRATEGY": 4,
     "RUN_CVC": 1,
     "FP_PDN_CORE_RING": false,
-    "VDD_NETS": ["vcc"],
-    "GND_NETS": ["vss"],
+    "VDD_NETS": ["vccd1"],
+    "GND_NETS": ["vssd1"],
     "pdk::sky130*": {
         "FP_CORE_UTIL": 45,
         "RT_MAX_LAYER": "met4",
