--- a/openlane/spi_register/config.json
+++ b/openlane/spi_register/config.json
@@ -1,22 +1,19 @@
 {
     "DESIGN_NAME": "spi_register",
-    "DESIGN_IS_CORE" : false,
-    "VERILOG_FILES": [
-        "dir::../../verilog/rtl/defines.v",
-        "dir::../../verilog/rtl/rtl_core/spi.v"
-        ],
-    "CLOCK_PERIOD": 24,
+    "DESIGN_IS_CORE": 0,
+    "VERILOG_FILES": ["dir::../../verilog/rtl/defines.v",
+        "dir::../../verilog/rtl/rtl_core/spi.v"],
+    "CLOCK_PERIOD": 10,
     "CLOCK_PORT": "reg_clk",
     "FP_SIZING": "absolute",
-    "DIE_AREA": "0 0 90 90",
+    "DIE_AREA": "0 0 120 120",
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "PL_BASIC_PLACEMENT": 0,
     "PL_TARGET_DENSITY": 0.55,
+    "VDD_NETS": ["vccd1"],
+    "GND_NETS": ["vssd1"],
     "DIODE_INSERTION_STRATEGY": 4,
     "RUN_CVC": 1,
-    "FP_PDN_CORE_RING": false,
-    "VDD_NETS": ["vcc"],
-    "GND_NETS": ["vss"],
     "pdk::sky130*": {
         "FP_CORE_UTIL": 45,
         "RT_MAX_LAYER": "met4",
