--- a/verilog/rtl_core/.github/workflows/verilog_test.yml
+++ b/verilog/rtl_core/.github/workflows/verilog_test.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      - uses: s-weigand/setup-conda@v1
       - name: Install Iverilog
         run: |
-          pip install conda
           conda install -c conda-forge iverilog
       - name: Run Test
         run: |
