--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "verilog/rtl_core"]
 	path = verilog/rtl_core
-	url = https://github.com/Patarimi/rtl_core
+	url = https://github.com/Patarimi/rtl_core.git
